Fixed bottom scrollbar

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
 /* Main */
 
 .box{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
 }
